Add google api request for getting books

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,5 +4,6 @@
         android:id="@+id/searchItem"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
-        app:actionLayout="@layout/layout_search_view" />
+        app:actionLayout="@layout/layout_search_view"
+        app:showAsAction="always" />
 </menu>
