--- a/app/src/main/res/layout/layout_search_view.xml
+++ b/app/src/main/res/layout/layout_search_view.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,11 +25,14 @@
             android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_weight="1"
+            android:textAppearance="?textAppearanceHeadline5"
             android:autofillHints="@string/search"
             android:background="@null"
             android:hint="@string/search"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:imeOptions="actionSearch|flagNoFullscreen"
             android:importantForAutofill="auto"
             android:inputType="text" />
@@ -38,8 +43,8 @@
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_marginStart="8dp"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/ic_close" />
+            android:src="@drawable/ic_close"
+            app:tint="@color/white" />
 
     </LinearLayout>
 
