--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,14 +14,29 @@
 
         <item name="toolbarStyle">@style/ToolbarStyle</item>
 
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:textColorHint">@color/white</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearanceHeadline5Style</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearanceHeadline6Style</item>
+        <item name="textAppearanceCaption">@style/TextAppearanceCaptionsStyle</item>
 
     </style>
 
     <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">@color/primary</item>
+    </style>
+
+    <style name="TextAppearanceHeadline5Style" parent="@style/TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextAppearanceHeadline6Style" parent="@style/TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextAppearanceCaptionsStyle">
+        <item name="android:textColor">#99000000</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
