--- a/app/src/main/res/layout/layout_search_view.xml
+++ b/app/src/main/res/layout/layout_search_view.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary"
-    android:orientation="vertical"
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/searchButton"
+        style="@style/Widget.AppCompat.ActionButton"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:src="@drawable/ic_search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_marginStart="16dp"
+        android:autofillHints="@string/search"
+        android:background="@null"
+        android:hint="@string/search"
+        android:imeOptions="actionSearch|flagNoFullscreen"
+        android:importantForAutofill="auto"
+        android:inputType="text"
+        android:textAppearance="?textAppearanceHeadline5"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
+        app:layout_constraintEnd_toStartOf="@+id/closeButton"
+        app:layout_constraintStart_toEndOf="@+id/searchButton"
+        app:layout_constraintTop_toTopOf="@+id/searchButton" />
 
-        <ImageView
-            android:id="@+id/searchButton"
-            style="@style/Widget.AppCompat.ActionButton"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:src="@drawable/ic_search" />
+    <ImageView
+        android:id="@+id/closeButton"
+        style="@style/Widget.AppCompat.ActionButton"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_close"
+        app:layout_constraintEnd_toStartOf="@+id/filterButton"
+        app:layout_constraintTop_toTopOf="@+id/searchButton"
+        app:tint="@color/white" />
 
-        <EditText
-            android:id="@+id/searchView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:textAppearance="?textAppearanceHeadline5"
-            android:autofillHints="@string/search"
-            android:background="@null"
-            android:hint="@string/search"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            android:imeOptions="actionSearch|flagNoFullscreen"
-            android:importantForAutofill="auto"
-            android:inputType="text" />
-
-        <ImageView
-            android:id="@+id/closeButton"
-            style="@style/Widget.AppCompat.ActionButton"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:layout_marginStart="8dp"
-            android:src="@drawable/ic_close"
-            app:tint="@color/white" />
-
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/filterButton"
+        style="@style/Widget.AppCompat.ActionButton"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:src="@drawable/ic_filter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/searchButton" />
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="8dp"
         android:alpha="0.3"
-        android:background="#fafafa" />
+        android:background="#fafafa"
+        app:layout_goneMarginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/closeButton"
+        app:layout_constraintStart_toStartOf="@+id/searchButton" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
