--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,15 @@
         android:id="@+id/booksFragment"
         android:name="com.example.booksearch.ui.dashboard.BooksFragment"
         android:label="fragment_books"
-        tools:layout="@layout/fragment_books" />
+        tools:layout="@layout/fragment_books" >
+        <action
+            android:id="@+id/action_booksFragment_to_searchOptionsFragment"
+            app:destination="@id/searchOptionsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/searchOptionsFragment"
+        android:name="com.example.booksearch.ui.dashboard.SearchOptionsFragment"
+        android:label="fragment_search_options"
+        tools:layout="@layout/fragment_search_options" />
 </navigation>
