--- a/app/src/main/res/layout/fragment_search_options.xml
+++ b/app/src/main/res/layout/fragment_search_options.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="@string/search_options"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:title="@string/search_options"/>
 
     <TextView
         android:id="@+id/subtitle"
@@ -26,9 +26,9 @@
         android:id="@+id/optionsList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/subtitle"
+        android:paddingHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_search_option" />
+        app:layout_constraintTop_toBottomOf="@+id/subtitle"
+        tools:listitem="@layout/item_search_option"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
