--- a/app/src/main/res/layout/layout_search_view.xml
+++ b/app/src/main/res/layout/layout_search_view.xml
@@ -7,14 +7,15 @@
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/searchButton"
         style="@style/Widget.AppCompat.ActionButton"
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:src="@drawable/ic_search"
+        android:tint="?attr/colorOnPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/searchView"
@@ -28,41 +29,42 @@
         android:importantForAutofill="auto"
         android:inputType="text"
         android:textAppearance="?textAppearanceHeadline5"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        android:textColorHint="?attr/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/searchButton"
         app:layout_constraintEnd_toStartOf="@+id/closeButton"
         app:layout_constraintStart_toEndOf="@+id/searchButton"
-        app:layout_constraintTop_toTopOf="@+id/searchButton" />
+        app:layout_constraintTop_toTopOf="@+id/searchButton"/>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/closeButton"
         style="@style/Widget.AppCompat.ActionButton"
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_close"
+        android:tint="?attr/colorOnPrimary"
         app:layout_constraintEnd_toStartOf="@+id/filterButton"
-        app:layout_constraintTop_toTopOf="@+id/searchButton"
-        app:tint="@color/white" />
+        app:layout_constraintTop_toTopOf="@+id/searchButton"/>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/filterButton"
         style="@style/Widget.AppCompat.ActionButton"
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:src="@drawable/ic_filter"
+        android:tint="?attr/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/searchButton" />
+        app:layout_constraintTop_toTopOf="@id/searchButton"/>
 
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:alpha="0.3"
-        android:background="#fafafa"
-        app:layout_goneMarginEnd="16dp"
+        android:background="?attr/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/closeButton"
-        app:layout_constraintStart_toStartOf="@+id/searchButton" />
+        app:layout_constraintStart_toStartOf="@+id/searchButton"
+        app:layout_goneMarginEnd="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
