--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary">#6200ee</color>
+    <color name="primary">#607d8b</color>
+    <color name="primaryLight">#8eacbb</color>
+    <color name="primaryDark">#34515e</color>
+    <color name="onPrimary">#000000</color>
+
+    <color name="secondary">#00796b</color>
+    <color name="secondaryLight">#48a999</color>
+    <color name="secondaryDark">#004c40</color>
+    <color name="onSecondary">#ffffff</color>
+
+    <color name="red_a700">#D50000</color>
+
+    <color name="gray_100">#F5F5F5</color>
+    <color name="gray_300">#E0E0E0</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
