--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,43 +1,34 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.BookSearch" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Primary brand color. -->
+        <!-- Primary brand colors -->
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/primary</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimaryVariant">@color/primaryDark</item>
+        <item name="colorOnPrimary">@color/onPrimary</item>
+        <!-- Secondary brand colors -->
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondaryVariant">@color/secondaryDark</item>
+        <item name="colorOnSecondary">@color/onSecondary</item>
+        <!-- Surface colors -->
+        <item name="colorSurface">@color/gray_300</item>
+        <item name="colorOnSurface">@color/black</item>
+        <!-- Background colors -->
+        <item name="android:colorBackground">@color/gray_100</item>
+        <item name="colorOnBackground">@color/black</item>
+        <!-- Warning and error colors -->
+        <item name="colorError">@color/red_a700</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- Status bar colors -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="android:toolbarStyle">@style/ToolbarStyle</item>
 
         <item name="textAppearanceHeadline5">@style/TextAppearanceHeadline5Style</item>
         <item name="textAppearanceHeadline6">@style/TextAppearanceHeadline6Style</item>
         <item name="textAppearanceCaption">@style/TextAppearanceCaptionsStyle</item>
 
-    </style>
-
-    <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
-        <item name="android:background">@color/primary</item>
-        <item name="titleTextColor">@color/white</item>
-    </style>
-
-    <style name="TextAppearanceHeadline5Style" parent="@style/TextAppearance.MaterialComponents.Headline5">
-        <item name="android:textColor">@color/black_87</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="TextAppearanceHeadline6Style" parent="@style/TextAppearance.MaterialComponents.Headline6">
-        <item name="android:textColor">@color/black_87</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="TextAppearanceCaptionsStyle">
-        <item name="android:textColor">#99000000</item>
-        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
